--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "loop.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/tsc -p tsconfig.json && node loop.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "tplink-smarthome-api": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node": "^12.0.10",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   }
